# Capstone

./: .gitignore  README.md
ADA4255_Dev/: ada4255_driver  ada4255_test.c
ADPC_Data_Streaming/: CMakeLists.txt  ada4255_driver  adpc_app.c  adpc_app.h  adpc_app_funcs.c  adpc_app_funcs.h  adpc_core1.c  adpc_core1.h  adpc_data_streaming.c  graphing.py  mcp3x6xR_driver  script.py
ADPC_Data_Streaming/logs/: log [2026-05-10 13-06-02].txt  log [2026-05-10 13-07-08].txt  log [2026-05-10 13-09-40].txt
ADPC_Data_Streaming/releases/: v0.uf2
ADPC_Dev/: ADPC_ADC.c  ADPC_ADC.h  ADPC_cfg.h  CMakeLists.txt  adpc_core1.c  adpc_core1.h  adpc_dsp.c  adpc_dsp.h  adpc_gpio_pwm.c  adpc_gpio_pwm.h  adpc_main.c  adpc_pwm.c  adpc_pwm.h  adpc_pwm_gpio.h  adpc_vsns.c  adpc_vsns.h
ADPC_Dev/ADPC_Docs/: HOW_TO_ADPC_Streaming.md  MCU Pinout.md  RP2350 Pin Functions.csv  mcu_pinout_fixer.py
Hardware/: README.md
Hardware/ADPC and MSIF KiCad/: ADPC Connections.kicad_sch  ADPC TC Interface.kicad_sch  BackupProjects_maxim.laplante_personal_0_20260420.kicad_pcb  BackupProjects_maxim.laplante_personal_0_20260420.kicad_prl  BackupProjects_maxim.laplante_personal_0_20260420.kicad_pro  BackupProjects_maxim.laplante_personal_0_20260420.kicad_sch  ISNS Interface.kicad_sch  MCU.kicad_sch  MSIF Analog.kicad_sch  MSIF MCU.kicad_sch  MSIF Main.kicad_sch  MSIF QDP.kicad_sch  Power Supplies.kicad_sch  fp-lib-table
Hardware/MPHB-002 KiCad/: BackupProjects_maxim.laplante_personal_1_20260420.kicad_pcb  BackupProjects_maxim.laplante_personal_1_20260420.kicad_prl  BackupProjects_maxim.laplante_personal_1_20260420.kicad_pro  BackupProjects_maxim.laplante_personal_1_20260420.kicad_sch  fp-lib-table
MCP3x6xR_Dev/: ADPC_ADC.c  ADPC_ADC.h  CMakeLists.txt  MCP_BB_cfg.h  README.md  graphing.py  mcp3x6xR_test.c  mcp_pio.c  mcp_pio.h  mcp_pio.pio  script.py
MCP3x6xR_Dev/logs/: log [2026-04-19-21-24-32].txt
MSIF_dev/: CMakeLists.txt  MSIF_cfg.h  main.c  msif_adc.c  msif_adc.h  msif_analog.c  msif_analog.h  msif_gpio.c  msif_gpio.h  msif_peak.c  msif_peak.h  msif_proto.c  msif_proto.h  msif_qms.c  msif_qms.h
MSIF_dev/MSIF_Docs/: calibration_plan.md  isaiah_getting_started.md  user_manual.md
W25_dev/: w25_interrupt_based_logging.c  w25_test.c
docs/: 00_README.md  01_Architecture.md  02_Safety_and_Hazards.md  03_Driver_Reference.md  04_Application_Layer.md  05_DMA_PIO_Streaming.md  06_Extending_MSIF_UART.md
python_scripts/: 260202_rawdata.txt  260202_rawdata_parse.py  260204_dad2_parse.py  260204_rawdata.txt  260210_dad2_parse.py  LICENSE (tc.py).txt  samplingratemath.txt
python_scripts/260204_data/: Vout and VTC (21A).csv  Vout and VTC (30A).csv  Vout and VTC (33A).csv
src2/: ADPC_cfg.h  CMakeLists.txt  KTYPE TC Voltages.csv  capstone_adc.c  capstone_adc.h  capstone_dsp.c  capstone_dsp.h  capstone_measurement_routines.c  capstone_measurement_routines.h  capstone_pwm.c  capstone_pwm.h  capstone_thermocouple.h  capstone_w25.c  capstone_w25.h  main.c
src2/ada4255_driver/: README.md  ada4255.c  ada4255.h
src2/dac80504_driver/: dac80504.c  dac80504.h
src2/mcp3x6xR_driver/: README.md  mcp3x6xR.c  mcp3x6xR.h  mcp3x6xr_read.pio  mcp_pio.c  mcp_pio.h  mcp_pio.pio
